--- a/app/src/main/res/layout/home_banner_layout.xml
+++ b/app/src/main/res/layout/home_banner_layout.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.cardview.widget.CardView
-            android:id="@+id/banner_popular"
+            android:id="@+id/rv_banner_popular"
             android:translationZ="-2dp"
             app:cardCornerRadius="12dp"
             android:padding="16dp"
@@ -30,7 +30,7 @@
                     android:layout_height="match_parent"/>
                 <ImageView
                     android:id="@+id/backdrop_image"
-                    android:contentDescription="@string/popular_now"
+                    android:contentDescription="@string/popular_movie"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:layout_width="match_parent"
@@ -59,7 +59,7 @@
             android:isIndicator="true"
             android:progressTint="@color/yellow"
             android:numStars="5"
-            app:layout_constraintBottom_toBottomOf="@id/banner_popular"
+            app:layout_constraintBottom_toBottomOf="@id/rv_banner_popular"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
