--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
   <color name="primaryDarkTextColor">#000000</color>
   <color name="secondaryDarkTextColor">#000000</color>
   <color name="yellow">#FFC107</color>
+  <color name="placeholder">#6FB6B6B6</color>
 </resources>
