--- a/app/src/main/res/layout/rv_home_layout.xml
+++ b/app/src/main/res/layout/rv_home_layout.xml
@@ -19,6 +19,7 @@
         android:id="@+id/rv_home_litem"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="horizontal"
+        android:nestedScrollingEnabled="true"
         app:layout_constraintTop_toBottomOf="@id/title_text"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="16dp"
