--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,4 +19,14 @@
         android:name="com.dicoding.moviecatalog.ui.detail.DetailFragment"
         android:label="detail_fragment"
         tools:layout="@layout/detail_fragment" />
+    <fragment
+        android:id="@+id/movieFragment"
+        android:name="com.dicoding.moviecatalog.ui.movie.MovieFragment"
+        android:label="movie_fragment"
+        tools:layout="@layout/movie_fragment" />
+    <fragment
+        android:id="@+id/tvShowFragment"
+        android:name="com.dicoding.moviecatalog.ui.tvshow.TvShowFragment"
+        android:label="tv_show_fragment"
+        tools:layout="@layout/tv_show_fragment" />
 </navigation>
