--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -77,4 +77,15 @@
         android:padding="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <ImageButton
+        android:id="@+id/fav_button"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_baseline_favorite_border_24"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
