--- a/app/src/main/res/layout/favorite_fragment.xml
+++ b/app/src/main/res/layout/favorite_fragment.xml
@@ -1,46 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
+<LinearLayout android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/home_fragment"
+    android:id="@+id/favorite_fragment"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.favorite.FavoriteFragment"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
+        <ImageButton
+            android:id="@+id/back_button"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            app:tint="@color/primaryColor"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/back"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <TextView
-            android:text="@string/nflx"
-            android:textSize="25sp"
-            android:layout_weight="1"
+            android:text="@string/favorite"
+            android:textSize="20sp"
             android:gravity="center_vertical"
             android:textStyle="bold"
             android:textColor="?attr/colorPrimary"
-            android:layout_marginStart="16dp"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
-        <ImageButton
-            android:id="@+id/fav_button"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="16dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_baseline_bookmark_24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
 
+
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_home"
+        android:id="@+id/tab_fav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewpager_home"
+        android:id="@+id/viewpager_fav"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
